--- a/Camouflage XML Editor/packages.config
+++ b/Camouflage XML Editor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ColorPickerWPF" version="1.0.9" targetFramework="net472" />
-  <package id="WriteableBitmapEx" version="1.6.5" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="3.8.1" targetFramework="net472" />
+  <package id="WriteableBitmapEx" version="1.5.1.0" targetFramework="net472" />
 </packages>
