--- a/Camouflage XML Editor/Camouflage XML Editor.csproj
+++ b/Camouflage XML Editor/Camouflage XML Editor.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ColorPickerWindow.xaml.cs">
       <DependentUpon>ColorPickerWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Utilities.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
