--- a/Camouflage XML Editor/packages.config
+++ b/Camouflage XML Editor/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ColorPickerWPF" version="1.0.9" targetFramework="net472" />
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
+  <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="WriteableBitmapEx" version="1.5.1.0" targetFramework="net472" />
 </packages>
